@@ -8,6 +8,7 @@
 * Fix - Disabled Payment Request Buttons when order has to be split into multiple packages because Payment Requests do not support that use case.
 * Fix - Fee discounts should use the discount currency rather than the base fee currency.
 * Add - Allow the customer to perform SCA authentication on Subscription renewals.
+* Update - Actualized supported countries list for onboarding.
 
 = 2.7.0 - 2021-07-14 =
 * Add - Add a link to the snackbar notice that appears after submitting or saving evidence for a dispute challenge.
